# rust_webserver

./: .env  Cargo.toml
src/: config.rs  db.rs  main.rs  routes.rs  utils.rs
src/handlers/: health_handler.rs  user_handler.rs
src/models/: user.rs
