[package]
name = "rust_webserver" 
version = "0.1.0"      
edition = "2021"          

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
